--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile files('libs/jsoup-1.8.3.jar')
+    compile 'com.beardedhen:androidbootstrap:+'
+    compile 'me.imid.swipebacklayout.lib:library:1.0.0'
+    compile 'in.srain.cube:ultra-ptr:1.0.10'
+    compile 'cn.pedant.sweetalert:library:1.3'
 }
