--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.badprinter.sysu_course" >
+    package="com.badprinter.sysu_course"
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".constant.AppContext"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        tools:replace="android:theme,android:icon"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.Main"
@@ -18,6 +21,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.BasicInfo"
+            android:label="@string/title_activity_basic_info" >
+        </activity>
+        <activity
+            android:name=".activity.Course"
+            android:label="@string/title_activity_course" >
         </activity>
     </application>
 
