--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
     compile 'in.srain.cube:ultra-ptr:1.0.10'
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'org.json:json:20141113'
 }
