--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.badprinter.sysu_course"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.badprinter.sysu_course" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,8 +11,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        tools:replace="android:theme,android:icon"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        tools:replace="android:theme,android:icon" >
         <activity
             android:name=".activity.Main"
             android:label="@string/app_name" >
@@ -37,6 +37,14 @@
             </intent-filter>
         </service>
 
+        <activity
+            android:name=".activity.Listen"
+            android:label="@string/title_activity_listen" >
+        </activity>
+        <activity
+            android:name=".activity.MyCourses"
+            android:label="@string/title_activity_my_courses" >
+        </activity>
     </application>
 
 </manifest>
