实现了安全换课功能,大大降低了换课被刷的概率

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:name=".activity.MyCourses"
             android:label="@string/title_activity_my_courses" >
         </activity>
+        <activity
+            android:name=".activity.SafeExchange"
+            android:label="@string/title_activity_safe_exchange" >
+        </activity>
     </application>
 
 </manifest>
